# rules_python-pip-cwd-bug

./: .gitignore  README.md  WORKSPACE.bazel
A/: setup.py
B/: BUILD.bazel  child-requirements.txt
