load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.1.0/rules_python-0.1.0.tar.gz",
    sha256 = "b6d46438523a3ec0f3cead544190ee13223a52f6a6765a29eae7b7cc24cc83a0",
)

load("@rules_python//python:pip.bzl", "pip_install")

pip_install(
    name = "b_deps",
    requirements = "//B:child-requirements.txt",
)

# I would like to be able to say:
# pip_install(
#     name = "b_deps",
#     requirements = "//B:child-requirements.txt",
#     working_directory = "B"
# )
# ... or similar.
#
# This would be like:
# npm_install(
#     name = "b_npm",
#     package_json = "//B:package.json",
#     package_path = "B",
#     package_lock_json = "//B:package-lock.json",
# )
# where you can specify `package_path` to change the current working directory but it would eventually (in rules_nodejs 4.x) default to the location of package.json.